Fix #68 Article bottom border spacing

--- a/Styles/_media.desktop.scss
+++ b/Styles/_media.desktop.scss
@@ -807,7 +807,6 @@ a.author:hover
     margin-left: 1.5em;
     font-family: $small-font;
     font-size: $small-font-size;
-    margin-bottom: -3pt;
 }
 
 .comment
@@ -827,7 +826,7 @@ a.author:hover
 .comment-form
 {
     margin-top: -3px;
-    margin-bottom: -10px;
+    margin-bottom: -7px;
 }
 
 .full-width
